Fixed add relation controls in node info page to make them more "human readable"

--- a/site_media/css/graphgamel.css
+++ b/site_media/css/graphgamel.css
@@ -45,3 +45,7 @@ div.instructions {
 div.hidden {
     display: none;
 }
+
+span.label {
+    background: #EDF3FE;
+}
